2014-11-18	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* autogen.sh: removing COPYING

	* src/countcolorpages.sh: script which counts all colored pages in pdf files

	* src/screenshot.sh: exporting to png files

2014-11-15	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/keymap.sh: using german deadacute if available

2014-11-05	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/latexrefre.sh: correctly handling bibtex updates
	tracking changes in .bst files (bibliography styles)

2014-10-22	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/transpose.sh: script to transpose rows and columns added

2014-10-06	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/latexrefre.sh: showing multiply-defined labels

2014-10-02	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/latexrefre.sh: showing undefined references and citations after compilation

2014-09-15	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/latexrefre.sh: description text added

2014-09-12	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/latexrefre.sh: "Press Enter" added

2014-09-11	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/latexrefre.sh: re-compiling on changes to the toc, lof, loa or lot
	using `sync` instead of some cheap hack

	* src/parallel.sh: removed in favor of gnu parallel

2014-09-04	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/latexrefre.sh: looking for .pdf_tex files, too
	looking for a tex file that contains '\documentclass'
	updating on .sty files

2014-09-03	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/pacman-disowned.sh: script to view disowned files added

2014-09-01	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/latexrefre.sh: emphasising errors and warnings using bash color escape codes

2014-08-28	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/lmpmpi.sh: removed

	* src/lmprun.sh: removed

	* src/gitfilter.sh: awesome wrapper around 'git filter-branch' added

2014-08-26	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/changelogfiles.sh: renamed to changelogupdate.sh
